--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,6 @@ header{
   clear: both;
 }
 
-.nav_left , .nav_center , .nav_right{
-  float: left;
-}
-
 .nav_left{
   width: 15%;
   padding-top: 15px;
@@ -123,7 +119,7 @@ nav a {
 }
 
 /* Fine Header + Navbar */
-
+/* Parte grigia sotto la navbar */
 .under_header{
   background-color: #d3d3d3;
   text-align: center;
@@ -142,4 +138,48 @@ nav a {
 .undertitle h3{
   color: grey;
   font-weight: 400;
+}
+/* Fine della parte grigia sotto la navbar */
+
+.row_one .row_two::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.col_4{
+  width: 30%;
+}
+
+.row_one :nth-child(2){
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.row_one , .row_two{
+  margin-top: 40px;
+  text-align: center;
+}
+
+.img_first_row{
+  height: 160px;
+}
+
+.col_4 h2{
+  color: #7cbb02;
+  font-size: 26px;
+  font-weight: 500;
+  margin: 20px 0 ;
+}
+
+.col_4 hr{
+  width: 25%;
+  margin: auto;
+}
+
+.col_4 p{
+  line-height: 1.5em;
+  color: grey;
+  margin-top: 20px;
+  font-size: 18px;
 }
